--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,8 @@
+2002 May 15
+
+    * STCompiler, Externs, STGrammar: fixed undefined exceptions (reported by 
+       Björn Gohla <b.gohla@gmx.de>)
+    
 2002 Mar 17
 
     * STCompiler, STGrammar: changed grammar to be able to have "methods" or
