--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,7 @@
+2002 May 29
+
+    * STCompiledScript: assign return value on executing single-method script
+
 2002 May 15
 
     * STCompiler, Externs, STGrammar: fixed undefined exceptions (reported by 
