*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@13738 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002 May 29
+    
+    * STExecutor: fixed typo
+    * STEnvironment: new method -allObjectsDictionary that returns a NSDictionary
+    with all named objects
+    * STObjCRuntime: new function STAllObjectiveCSelectors
+    
 2002 May 24
 
     * STEngine: engineForLanguage: renamed to engineForLanguageWithName:.
