*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@13740 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/Shell/README
+++ b/Examples/Shell/README
@@ -66,6 +66,10 @@ To show all objects type:
        0: '2002-05-29 22:41:57 +0200' (GSCInlineString)
        1: 'Current date is 2002-05-29 22:41:57 +020...' (GSUnicodeString)
 
+TAB completition
+----------------
+Here is an example of TAB completition.
+    StepTalk > Tr<TAB> showL<TAB>:'Current date is ', ((NSDate date) desc<TAB>i<TAB>)
 
 Feedback
 --------
