This commit was manufactured by cvs2svn to create tag 'StepTalk-0_6_0'.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/tags/StepTalk-0_6_0@13811 72102866-910b-0410-8b05-ffd578937521

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.6.0
+
+    * Created 'Object Finders'
+        Distributed Object Finder 
+        Application Finder
+    * New example tool stshell - the StepTalk shell
+    * Automated loading of modules and finders using scripting environment 
+      descriptions
+    * StepTalk defaults changed
+    * Some source documentation added
+    * Bugfixes in Smalltalk language
+    
 0.5.2
 
     * Separated AppTalk
