--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,91 @@
+2002 Jun 8
+
+    * STEnvironmentDescription: added module amd finder list; little code 
+    cleanup; removed descriptionFromFile: and initFromFile: methods
+    * STEnvironment: removed methods
+        environmentWithDescriptionFromFile:
+        environmentWithDescriptionFromDictionary:
+        initWithDescriptionFromFile: 
+        init
+        addAllClasses
+        addObject:withName:
+        allObjectNames
+    new methods:
+        environmentWithDescription:
+        initWithDescription:
+    renamed methods:
+        defaultObjectPool to objectDictionary
+        registerObjectFinderWithName: to registerObjectFinderNamed:
+    load modules and finders from description at initialization;
+    * STExecutor: reflect STEnvironment changes        
+    * stexec: removed loading of the Foundation module as this is handled
+    by the STEnvironment
+    * Environments: new descriptions AppKit.stenv and Distributed.stenv
+    
+2002 Jun 7
+
+    * STEnvironmentDescription: added abstract class 'All' that is root
+    class for all classes
+    * Foundation-operators.stenv: add symbolic selector '->' to all classes
+
+2002 Jun 6
+
+    * Added symbolic selector '->' for valueForKeyPath:
+    * StepTalk.stenv: allow whileTrue: and whileFalse: in STBlock
+    * NSObject+additions: moved from Smalltalk; added -isSame: method
+    * DistributedFinder: prevent NSDictionary log when there is no file for 
+    a requested object; changed NSLogs to NSDebugLLogs with 'STFinder'; do not
+    try to launch nil tool
+    
+2002 Jun 4
+
+    * STEnvironment: new methods -addObjectFinder:name:,
+    -addObjectFinderWithName:, -removeObjectFinderWithName:;
+    new method knownObjectNames;
+    objectReferenceForObjectWithName: changed to use nil reference on
+    known object that cannot be currently found
+    * Finders: new directory containing object finders
+    * STObjCRuntime: include selectors of metaclasses in 
+    STAllObjectiveCSelectors()
+    * Documentation/HowTo.txt: rewritten
+    
+2002 Jun 3
+
+    * STFunctions: renamed "StepTalk/Config" directory to 
+    "StepTalk/Configuration"; fixed bug in STFindAllResources (resourceDir
+    was ignored)
+    * STEnvironment: changed method allObjectsDictionary to allObjectNames
+    
+2002 May 30
+
+    * STEnvironment: removed pools
+    * STObjectReference: removed method initWithObjectName:pool:create:
+    
+2002 May 29
+    
+    * STExecutor: fixed typo
+    * STEnvironment: new method -allObjectsDictionary that returns a NSDictionary
+    with all named objects
+    * STObjCRuntime: new function STAllObjectiveCSelectors
+    
+2002 May 24
+
+    * STEngine: engineForLanguage: renamed to engineForLanguageWithName:.
+    Some method documentation added.
+    * STExecutor: reflect method renaming
+    * STLanguage: read default language name from actual user defaults (not 
+    from the StepTalk domain) and renamed the key to STDefaultLanguageName. 
+    Renamed languageWithBundle: to languageWithPath:. Some method documentation 
+    added.
+    * STEnvironmentDescription: read default description name from actual user 
+    defaults (not from the StepTalk domain)
+    * STEnvironment: Some method documentation added.
+    * StepTalk.gsdoc: new file
+
+2002 May 13
+    
+    * Uploaded to the GNUstep CVS repository by Adam Fedor
+    
 2002 Apr 20
 
     * COPYING: updated
@@ -10,10 +98,6 @@
     Use make appkit=no.
     * Separated AppTalk
      
-2002 Mar 21
-    
-    * STEnvironment: removed pools
-
 2002 Mar 17
 
     * STEngine: removed executeScript: methods and use only executeSource:
