--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
+2002 Jun 14
+
+    * Modules/ObjectiveC: new module
+    
 2002 Jun 10
 
     * NSObject+additions: removed -className as it was added to the base library
+
+2002 Jun 9
+
+    * Version 0.6.0 released
 
 2002 Jun 8
 
