Fixed AppKit constants
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@14443 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2002 Sep 15
+
+    * Version 0.6.1
+
+2002 Sep 15
+
+    * Modules/AppKit/AppKitConstants.list: commented out undefined constants
+    
+2002 Sep 7
+
+    * Modules/AppKit/AppKitInfo.plist: added NSSound class
+    
 2002 Aug 27
 
     * Source/*.m: Cleanup to remove compiler warnings.
