--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.6.1
+
+    * Code cleanup
+    * New modules: ObjectiveC and StepTalk
+    * New classes: STScript and STScriptManager
+
 0.6.0
 
     * Created 'Object Finders'
