Added added selectorsContainingString:
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@14978 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
+2002 Nov 11
+    
+    * ObjectiveC module: added selectorsContainingString:
+
+2002 Nov 5
+
+    * Added MyLanguage as empty example language bundle
+
 2002 Sep 17
     
-    * Patch from <deek@d2dc.net> with various bug-fixes
+    * Patch from Jeff Teunissen <deek@d2dc.net> with various bug-fixes
     * Added .cvsignore files
     
 2002 Sep 15
