Added GDL2 module
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15177 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002 Nov 29
+
+    * Added GDL2 module
+    * STModule: more details on module loading fault
+
 2002 Nov 11
     
     * ObjectiveC module: added selectorsContainingString: and
