Added parser for real numbers
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15315 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002 Dec 21
+
+    * Languages/GNUmakefile, Modules/GNUmakefile, Finders/GNUmakefile: removed
+    forced installation to the GNUSTEP_USER_ROOT. ~/Library/StepTalk/* should
+    be deleted.
+
 2002 Nov 29
 
     * Added GDL2 module
