--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
     * Languages/GNUmakefile, Modules/GNUmakefile, Finders/GNUmakefile: removed
     forced installation to the GNUSTEP_USER_ROOT. ~/Library/StepTalk/* should
     be deleted.
+    * Documentation/Modules.txt: added
 
 2002 Nov 29
 
