--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2003 Jan 15
 
     * GDL2: added installation of GDL2.stenv
+    * Documentation/Tools.txt: new file documenting steptalk tools
 
 2002 Dec 25
     
