added few todos
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15606 72102866-910b-0410-8b05-ffd578937521

--- a/TODO
+++ b/TODO
@@ -5,3 +5,8 @@ TODO list
 3 implement NSRect object
 4 write documentation for developers and users
 5 Smalltalk: separate compiler and compilation context
+6 rename modules to bundles, use just .bundle extension and create cote for
+  STEnvironment to handle all bundles with specified protocol (including
+  frameworks)
+7 make GDL2 bundle automatically if GDL2 is present
+8 prevent multiple loading of bundles in STEnvironment
