Removed inclusion of source-distribution.make
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15651 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003 Jan 20
+
+    * GNUMakefile: Removed inclusion of source-distribution.make, as it is
+    not needed (suggested by Nicola Pero <nicola@brainstorm.co.uk>)
+    
 2003 Jan 15
 
     * GDL2: added installation of GDL2.stenv
