Added developer examples
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15653 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
     * GNUMakefile: Removed inclusion of source-distribution.make, as it is
     not needed (suggested by Nicola Pero <nicola@brainstorm.co.uk>)
+    * Examples/Developer: new directory containing developer examples
     
 2003 Jan 15
 
