--- a/TODO
+++ b/TODO
@@ -1,13 +1,15 @@
 TODO list
+x done
+- partialy done
 
-1 handle 'connection did die' notification for distant objects in STEnvironment
-2 fix class-info lookup for proxies in STEnvironment
-3 implement NSRect object
-4 write documentation for developers and users
-5 Smalltalk: separate compiler and compilation context
-6 rename modules to bundles, use just .bundle extension and create cote for
-  STEnvironment to handle all bundles with specified protocol (including
-  frameworks)
-7 make GDL2 bundle automatically if GDL2 is present
-8 prevent multiple loading of bundles in STEnvironment
-9 Add Shell scripting environment
+1   handle 'connection did die' notification for distant objects in STEnvironment
+2   fix class-info lookup for proxies in STEnvironment
+3   implement NSRect object
+4   write documentation for developers and users
+5   Smalltalk: separate compiler and compilation context
+6 x rename modules to bundles, use just .bundle extension and create code for
+    STEnvironment to handle all bundles with specified protocol (including
+    frameworks)
+7   make GDL2 bundle automatically if GDL2 is present
+8 x prevent multiple loading of bundles in STEnvironment
+9   create a 'Shell' scripting environment
