Use plain .bundle instead of .stmodule
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15691 72102866-910b-0410-8b05-ffd578937521

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.6.3
+    * Added ability to use any bundle or framework for scripting 
+    * Moved scripting information from bundle info dictionary into separate
+    file.
+    * Replaced .stmodules with plain bundles.
+    * Removed STModule class
+    * Added conditional GDL2 module installation.
+    * Small improvements and bug-fixes.
+
+    IMPORTANT NOTE: You have to rebuild and reinstall all modules, because the
+    format has changed.
+
 0.6.2
 
     * Smalltalk: Added parsing of real numbers
