Fixed NSBundle stepTalkBundleNames to use .bundle
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15697 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003 Jan 25
+
+    * STBundleInfo: Fixed NSBundle stepTalkBundleNames to use .bundle file
+    extension
+
 2003 Jan 24
 
     * STBundleInfo: Use info from ScriptingInfo.plist instead of bundle's main
