--- a/TODO
+++ b/TODO
@@ -2,14 +2,16 @@ TODO list
 x done
 - partialy done
 
-1   handle 'connection did die' notification for distant objects in STEnvironment
-2   fix class-info lookup for proxies in STEnvironment
-3   implement NSRect object
-4   write documentation for developers and users
-5   Smalltalk: separate compiler and compilation context
-6 x rename modules to bundles, use just .bundle extension and create code for
+ 1   handle 'connection did die' notification for distant objects in STEnvironment
+ 2   fix class-info lookup for proxies in STEnvironment
+ 3   implement NSRect object
+ 4   write documentation for developers and users
+ 5   Smalltalk: separate compiler and compilation context
+ 6 x rename modules to bundles, use just .bundle extension and create code for
     STEnvironment to handle all bundles with specified protocol (including
     frameworks)
-7   make GDL2 bundle automatically if GDL2 is present
-8 x prevent multiple loading of bundles in STEnvironment
-9   create a 'Shell' scripting environment
+ 7   make GDL2 bundle automatically if GDL2 is present
+ 8 x prevent multiple loading of bundles in STEnvironment
+ 9   create a 'Shell' scripting environment
+10   Make loading of frameworks easier in STEnvironment, something like
+     loadFrameworkWithName:
