Compiler warnings cleanup
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15787 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003 Jan 30
+
+    * STBundleInfo: Removed compiler warning
+    * Modules/*: Cleanup for compiler warnings   
+
 2003 Jan 29
 
     * Modules/ObjectiveC: fixed GNUmakefile to include source headers
