Treat 1. as an integer
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15867 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,8 @@
+2003 Feb 3
+
+    * STSourceReader: fixed reading of a number terminated with '.', we
+    treat it as an integer. Reader was complaining about i := 1.
+
 2003 Jan 30
 
     * ChangeLog, STBlock.m, STBytecodes.h, 
