Removed import of STModule
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16027 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003 Feb 21
+
+    * StepTalk.h: Removed #import of STModule.h as it is no longer there
+
 2003 Feb 11
 
     * Source/GNUmakefile: fixed installation of documentation
