--- a/Examples/Shell/README
+++ b/Examples/Shell/README
@@ -17,7 +17,7 @@ Features
 
 Installation
 ------------
-Requirements: StepTalk and readline library
+Requirements: StepTalk and the readline library (development files)
 
     > make 
     > make install
