--- a/Examples/Shell/README
+++ b/Examples/Shell/README
@@ -14,6 +14,7 @@ Features
     - command-line editing
     - TAB completition of named objects and selectors
 
+For more information read included *.txt files.
 
 Installation
 ------------
