Added scripting menu
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16230 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,5 +1,10 @@
 2003 Mar 23
 
+    * Added ScriptingMenu.gorm
+    * NSApplication: new methods: scriptingMenu and setScriptingMenu:
+
+2003 Mar 23
+
     * Rewritten and changed from library to bundle.
 
 2002 Jun 18
