Scripting documentation cleanup
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16242 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,3 +1,9 @@
+2003 Mar 24
+
+    * GNUmakefile*: Removed unnecessary stuff
+    * Documentation: Moved relevant docs into StepTalk documentation. Removed
+    the directory.
+
 2003 Mar 23
 
     * Added ScriptingMenu.gorm
