--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,9 @@
+2003 Mar 25
+
+    * STSourceReader: added missing [super dealloc]
+    * STCompiledCode: do not retain bytecode data
+    * STCompiler: various memory leak fixes
+
 2003 Mar 23
 
     * STSourceReader: added some end of string checks
