Updated scripts manager
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16256 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/README
+++ b/ApplicationScripting/README
@@ -15,8 +15,8 @@ users can:
 - automate tasks in the application
 - create a batch task
 
-How to make applications scriptable is described in Documentation. It can be
-done very easily in less than five minutes.
+How to make applications scriptable is described in StepTalk/Documentation. It
+can be done very easily in less than five minutes.
 
 
 Where to get it?
