guard compilation exception and release the compiler
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16262 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -3,6 +3,7 @@
     * STSourceReader: added missing [super dealloc]
     * STCompiledCode: do not retain bytecode data
     * STCompiler: various memory leak fixes
+    * SmalltalkEngine: guard compilation exception and release the compiler
 
 2003 Mar 23
 
