Disallow multiple selection of scripts
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16280 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,3 +1,8 @@
+2003 Mar 27
+
+    * ScriptsPanel.gorm: disallow multiple selection in scripts list. It was
+    not possible to get index of selected cell, because of -gui b0rk.
+
 2003 Mar 24
 
     * GNUmakefile*: Removed unnecessary stuff
