--- a/TODO
+++ b/TODO
@@ -1,17 +1,16 @@
 TODO list
-x done
-- partialy done
 
- 1   handle 'connection did die' notification for distant objects in STEnvironment
- 2   fix class-info lookup for proxies in STEnvironment
- 3   implement NSRect object
- 4   write documentation for developers and users
- 5   Smalltalk: separate compiler and compilation context
- 6 x rename modules to bundles, use just .bundle extension and create code for
-    STEnvironment to handle all bundles with specified protocol (including
-    frameworks)
- 7   make GDL2 bundle automatically if GDL2 is present
- 8 x prevent multiple loading of bundles in STEnvironment
- 9   create a 'Shell' scripting environment
-10   Make loading of frameworks easier in STEnvironment, something like
-     loadFrameworkWithName:
+ 1 handle 'connection did die' notification for distant objects in STEnvironment
+ 2 fix class-info lookup for proxies in STEnvironment
+ 3 implement NSRect object
+ 4 write documentation for developers and users
+ 5 Smalltalk: separate compiler and compilation context
+ 7 make GDL2 bundle automatically if GDL2 is present
+ 8 prevent multiple loading of bundles in STEnvironment
+ 9 create a 'Shell' scripting environment
+10 Make loading of frameworks easier in STEnvironment, something like
+   loadFrameworkWithName:
+11 Create ApplicationScripting framework, instead of bundle. It should offer
+   passive application scripting (without linking) and active app. scripting
+   (linking with the framewotk). Give it some reasonable name, becauase that one
+   is already used by Apple
