Sort scripts by localized name
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16341 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003 Apr 3   Stefan Urbanek <urbanek@host.sk>
+
+    * STScript: added compareByLocalizedName:
+
 2003 Mar 30  Stefan Urbanek <urbanek@host.sk>
 
     * WISH: new file
