* STEngine.h: Fixed declaration to match implementation to avoid     compiler warnings.     * STEnvironment.h: Ditto.     * STScriptsManager.h: Ditto.     * STLanguage.h: Corrected declaration.     * STScriptsManager.m: Added needed interface declaration.     * GNUmakefile:  Added flags to show all warnings except for import.     * Module/ObjectiveC/GNUmakefile:  Added flags to show all warnings     except for import.     * Module/Foundation/GNUmakefile:  Added flags to show all warnings     except for import.     * Module/AppKit/AppKitExceptions.m: Used variable to supress compiler     warnings.     * Module/AppKit/AppKitNotifications.m: Ditto.     * Module/AppKit/GNUmakefile:  Added flags to show all warnings except     for import.     * Module/GDL2/GDL2Constants.m: Used variable to supress compiler     warnings.     * Module/GDL2/GNUmakefile: Added flags to show all warnings except     for import.     * Module/SimpleTranscripts/GNUmakefile: Added flags to show all warnings     except for import.     * Module/StepTalk/GNUmakefile: Added flags to show all warnings     except for import.     * Tools/stalk.m: Added needed interface declaration.     * Tools/stupdate_languages.m: Corrected variable declaration and added     cast.
ApplicationScripting
    * GNUmakefile: Added flags to be able to compile from the building
    directories and show all warnings except for import.
    * NSApplication+additions.m: Added import of needed headers.  Added
    interface declarations to supress compiler warnings.  Commented unused
    variables to supress compiler warnings.  Corrected variable types and
    added necessary casts.
    * STScriptingSupport.m: Added interface declaraions to supress
    compiler warnings.

Examples/Shell
    * GNUmakefile: Added flags to show all warnings except for import.
    * STShell.m: Unified name for private categories.

Examples/Server
    * ChangeLog: Added new file.
    * GNUmakefile: Added flags to show all warnings except for import.

Lan

--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,3 +1,14 @@
+2003 Apr 04  David Ayers  <d.ayers@inode.at>
+
+    * GNUmakefile: Added flags to be able to compile from the building
+    directories and show all warnings except for import.
+    * NSApplication+additions.m: Added import of needed headers.  Added
+    interface declarations to supress compiler warnings.  Commented unused
+    variables to supress compiler warnings.  Corrected variable types and
+    added necessary casts.
+    * STScriptingSupport.m: Added interface declaraions to supress
+    compiler warnings.
+	
 2003 Mar 27
 
     * ScriptsPanel.gorm: disallow multiple selection in scripts list. It was
